✨feat: 子序列个数

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.autoSave": "afterDelay",
     "prettier.enableDebugLogs": true,
     "prettier.requireConfig": true,
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "cSpell.words": [
+        "rabbbit"
+    ]
 }
