--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "prettier.requireConfig": true,
     "editor.formatOnSave": true,
     "cSpell.words": [
+        "babgbag",
         "rabbbit"
     ]
 }
