--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "editor.formatOnSave": true,
     "cSpell.words": [
         "babgbag",
+        "logn",
+        "nums",
         "rabbbit"
     ]
 }
