--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "prettier.requireConfig": true,
     "editor.formatOnSave": true,
     "cSpell.words": [
+        "PAHNAPLSIIGYIR",
+        "PAYPALISHIRING",
+        "PINALSIGYAHRPI",
         "babgbag",
         "logn",
         "nums",
